--- a/.github/workflows/bookings.yaml
+++ b/.github/workflows/bookings.yaml
@@ -68,6 +68,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Clone kong-air-common repository
+        run: git clone git@github.com:maschenkeveld/kong-air-common.git
+
       - name: Download Kong Patched Config
         uses: actions/download-artifact@v4
         with:
@@ -80,7 +83,7 @@ jobs:
       - name: Diff Kong Config
         run: |
           source $DECK_API_NAME/api/env-vars/env-vars
-          deck gateway diff $DECK_API_NAME/api/deck-file/generated/kong-plugined-and-patched.yaml common/plugin-templates/opentelemetry.yaml --konnect-addr $KONNECT_ADDR --konnect-control-plane-name "$KONNECT_CONTROL_PLANE_NAME" --konnect-token $KONNECT_TOKEN --select-tag $DECK_API_NAME --select-tag $DECK_OWNER
+          deck gateway diff $DECK_API_NAME/api/deck-file/generated/kong-plugined-and-patched.yaml kong-air-common/plugin-templates/default-jwt.yaml --konnect-addr $KONNECT_ADDR --konnect-control-plane-name "$KONNECT_CONTROL_PLANE_NAME" --konnect-token $KONNECT_TOKEN --select-tag $DECK_API_NAME --select-tag $DECK_OWNER
 
 # APPROVAL STAGE (SHOW SUMMARY OF DIFF), USE PULL TO APPROVE
 # BACKUP STAGE -> TO ARTEFACTS
