--- a/.github/workflows/bookings.yaml
+++ b/.github/workflows/bookings.yaml
@@ -30,8 +30,12 @@ jobs:
     steps:
       - name: Query PostgreSQL
         run: |
-          psql -h "$PGHOST" -p "$PGPORT" -U "$PGUSER" -d "$PGDATABASE" -c "SELECT * FROM catalog"
-
+          psql -h "$PGHOST" -p "$PGPORT" -U "$PGUSER" -d "$PGDATABASE" -At -F ',' -c "SELECT service, dp_namespace, env FROM catalog;" | while IFS=',' read -r service dp_namespace env; do
+            echo "Processing service: $service"
+            echo "Namespace: $dp_namespace"
+            echo "Environment: $env"
+            echo "--------------------------"
+          done
   generate_kong_config:
     runs-on: self-hosted
     needs: query-db
