--- a/bookings/api/patches/patches.yaml
+++ b/bookings/api/patches/patches.yaml
@@ -4,7 +4,7 @@ patches:
   - selectors:
     - $.services[?(@.name=="bookings-service")]
     values:
-      host: bookings.kongair
+      host: "${a_variable_to_be_replaced_by_your_gitops_tool}"
       port: 8082
       protocol: http
       plugins:
