--- a/.github/workflows/bookings.yaml
+++ b/.github/workflows/bookings.yaml
@@ -41,7 +41,7 @@ jobs:
 
   generate_kong_config:
     runs-on: self-hosted
-    needs: query-db
+    needs: query-db-for-service-exposure-1
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
