--- a/.github/workflows/bookings.yaml
+++ b/.github/workflows/bookings.yaml
@@ -163,10 +163,53 @@ jobs:
       - name: kong2kic Kong Config
         run: |
           source $DECK_API_NAME/api/env-vars/env-vars
-          deck file kong2kic --ingress -s $DECK_API_NAME/api/deck-file/generated/kong-rendered.yaml -o $DECK_API_NAME/api/deck-file/generated/k8s.yaml
+          deck file kong2kic -s $DECK_API_NAME/api/deck-file/generated/kong-rendered.yaml -o $DECK_API_NAME/api/deck-file/generated/k8s.yaml
+
+      - name: Split Kubernetes YAML
+        run: |
+          # Define the file path
+          FILE_PATH="${{ env.DECK_API_NAME }}/api/deck-file/generated/k8s.yaml"
+          OUTPUT_DIR="${{ env.DECK_API_NAME }}/api/deck-file/generated/split_manifests"
+
+          # Check if the file exists
+          if [[ ! -f "$FILE_PATH" ]]; then
+            echo "Error: $FILE_PATH does not exist. Stopping workflow."
+            exit 1
+          fi
+
+          # Create the output directory
+          mkdir -p "$OUTPUT_DIR"
+
+          # Split the YAML file at "---" dividers
+          csplit --quiet --prefix="$OUTPUT_DIR/manifest" "$FILE_PATH" '/^---$/' '{*}'
+
+          # Iterate over split files and rename them
+          for file in "$OUTPUT_DIR"/manifest*; do
+            kind=$(yq e '.kind' "$file")
+            name=$(yq e '.metadata.name' "$file")
+
+            # Ensure both kind and name are present before renaming
+            if [[ -n "$kind" && -n "$name" ]]; then
+              new_filename="$OUTPUT_DIR/${kind}_${name}.yaml"
+              mv "$file" "$new_filename"
+              echo "Created $new_filename"
+            else
+              echo "Skipping file: $file (Missing kind or name)"
+            fi
+          done
+
+      - name: Upload Split YAMLs as Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: split-k8s-manifests
+          path: ${{ env.DECK_API_NAME }}/api/deck-file/generated/split_manifests/*.yaml
+
+
+
 
   query-db-for-service-exposure-2:
     runs-on: self-hosted
+    needs: kong2kic
 
     env:  # Store environment variables at the job level
       PGHOST: postgres.pve-1.schenkeveld.io
