--- a/.github/workflows/bookings.yaml
+++ b/.github/workflows/bookings.yaml
@@ -174,6 +174,8 @@ jobs:
           
           PROMPT="Can you transform these Kong KIC manifests: $(cat $DECK_API_NAME/api/deck-file/generated/k8s.yaml) into Kong Gateway Operator manifests like these examples: $(cat .github/gwo-examples.yaml) YAML manifests? Please only output the transformed YAML manifests as a single file, divided by --- dividers."
 
+          echo "ChatGPT Prompt: $PROMPT"
+
           RESPONSE=$(curl -s -X POST $API_URL \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer $OPENAI_API_KEY" \
@@ -182,6 +184,8 @@ jobs:
                   "prompt": "'"$PROMPT"'",
                   "max_tokens": 10000
                 }')
+
+          echo "ChatGPT Response: $RESPONSE"
 
           # Extract the generated text from the API response
           GENERATED_TEXT=$(echo $RESPONSE | jq -r '.choices[0].text')
