--- a/.github/workflows/bookings.yaml
+++ b/.github/workflows/bookings.yaml
@@ -170,7 +170,7 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           API_URL="https://api.openai.com/v1/completions"
-          MODEL="GPT-4o"
+          MODEL="gpt-3.5-turbo"
           
           PROMPT="Can you transform these Kong KIC manifests: $(cat $DECK_API_NAME/api/deck-file/generated/k8s.yaml) into Kong Gateway Operator manifests like these examples: $(cat .github/gwo-examples.yaml) YAML manifests? Please only output the transformed YAML manifests as a single file, divided by --- dividers."
 
