--- a/.github/workflows/bookings.yaml
+++ b/.github/workflows/bookings.yaml
@@ -165,37 +165,36 @@ jobs:
           source $DECK_API_NAME/api/env-vars/env-vars
           deck file kong2kic -s $DECK_API_NAME/api/deck-file/generated/kong-rendered.yaml -o $DECK_API_NAME/api/deck-file/generated/k8s.yaml
 
-      - name: Send prompt to ChatGPT API using Bash
+      - name: Send prompt to Ollama API using Bash
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          API_URL="https://api.openai.com/v1/completions"
-          MODEL="gpt-3.5-turbo"
+          API_URL="http://10.22.0.98:11434/v1/chat/completions"
           
           PROMPT="Can you transform these Kong KIC manifests: $(cat $DECK_API_NAME/api/deck-file/generated/k8s.yaml) into Kong Gateway Operator manifests like these examples: $(cat .github/gwo-examples.yaml) YAML manifests? Please only output the transformed YAML manifests as a single file, divided by --- dividers."
 
           ESCAPED_PROMPT=$(echo $PROMPT | jq -sRr @uri)
 
-          echo "ChatGPT Prompt: $PROMPT"
+          echo "Ollama Prompt: $PROMPT"
 
-          echo "ChatGPT Escaped Prompt: $ESCAPED_PROMPT"
+          echo "Ollama Escaped Prompt: $ESCAPED_PROMPT"
 
-          RESPONSE=$(curl -s -X POST $API_URL \
+          RESPONSE=$(curl http://10.22.0.98:11434/v1/chat/completions \
             -H "Content-Type: application/json" \
-            -H "Authorization: Bearer $OPENAI_API_KEY" \
             -d '{
-                  "model": "'"$MODEL"'",
-                  "prompt": "'"$ESCAPED_PROMPT"'",
-                  "max_tokens": 10000
-                }')
+            "model": "llama3.2",
+            "messages": [
+              { "role": "user", "content": "$ESCAPED_PROMPT" }
+              ]
+            }')
 
-          echo "ChatGPT Response: $RESPONSE"
+          echo "Ollama Response: $RESPONSE"
 
           # Extract the generated text from the API response
-          GENERATED_TEXT=$(echo $RESPONSE | jq -r '.choices[0].text')
+          GENERATED_TEXT=$(echo $RESPONSE | jq -r '.choices[0].message.content')
 
           # Print the response
-          echo "ChatGPT Response: $GENERATED_TEXT"
+          echo "Ollama Response: $GENERATED_TEXT"
 
           echo  $GENERATED_TEXT > $DECK_API_NAME/api/deck-file/generated/k8s_tranformed.yaml
 
