--- a/.github/workflows/bookings.yaml
+++ b/.github/workflows/bookings.yaml
@@ -173,20 +173,16 @@ jobs:
           
           PROMPT="Can you transform these Kong KIC manifests: $(cat $DECK_API_NAME/api/deck-file/generated/k8s.yaml) into Kong Gateway Operator manifests like these examples: $(cat .github/gwo-examples.yaml) YAML manifests? Please only output the transformed YAML manifests as a single file, divided by --- dividers."
 
-          ESCAPED_PROMPT=$(echo $PROMPT | jq -R @json)
+          ESCAPED_PROMPT=$(echo "$PROMPT" | jq -R 'tostring')
 
           echo "Ollama Prompt: $PROMPT"
 
           echo "Ollama Escaped Prompt: $ESCAPED_PROMPT"
 
           RESPONSE=$(curl http://10.22.0.98:11434/v1/chat/completions \
-            -H "Content-Type: application/json" \
-            -d '{
-            "model": "llama3.2",
-            "messages": [
-                { "role": "user", "content": "$ESCAPED_PROMPT" }
-              ]
-            }')
+              -H "Content-Type: application/json" \
+              -d "{\"model\": \"llama3.2\", \"messages\": [{\"role\": \"user\", \"content\": $ESCAPED_PROMPT }]}")
+
 
           echo "Ollama Response: $RESPONSE"
 
