--- a/.github/workflows/bookings.yaml
+++ b/.github/workflows/bookings.yaml
@@ -144,7 +144,7 @@ jobs:
           name: kong-rendered.yaml
           path: ${{ env.DECK_API_NAME }}/api/deck-file/generated/kong-rendered.yaml
 
-  kong2kic:
+  kong2kic2ollama:
     runs-on: self-hosted
     needs: render_kong_config
     steps:
@@ -171,7 +171,7 @@ jobs:
         run: |
           API_URL="http://10.22.0.98:11434/v1/chat/completions"
           
-          PROMPT="Can you transform these Kong KIC manifests: $(cat $DECK_API_NAME/api/deck-file/generated/k8s.yaml) into Kong Gateway Operator manifests like these examples: $(cat .github/gwo-examples.yaml) YAML manifests? Please only output the transformed YAML manifests as a single file, divided by --- dividers."
+          PROMPT="Can you transform these Kong KIC manifests: $(cat $DECK_API_NAME/api/deck-file/generated/k8s.yaml) into Kong Gateway Operator manifests like these examples: $(cat .github/gwo-examples.yaml) YAML manifests? Please only output the transformed YAML manifests as a single file, divided by --- dividers. No extra text, only the yaml."
 
           ESCAPED_PROMPT=$(echo $PROMPT | jq -R @json)
 
@@ -181,7 +181,7 @@ jobs:
 
           RESPONSE=$(curl http://10.22.0.98:11434/v1/chat/completions \
               -H "Content-Type: application/json" \
-              -d "{\"model\": \"llama3.2\", \"messages\": [{\"role\": \"user\", \"content\": $ESCAPED_PROMPT }]}")
+              -d "{\"model\": \"gemma3\", \"messages\": [{\"role\": \"user\", \"content\": $ESCAPED_PROMPT }]}")
 
 
           echo "Ollama Response: $RESPONSE"
@@ -236,7 +236,7 @@ jobs:
 
   query-db-for-service-exposure-2:
     runs-on: self-hosted
-    needs: kong2kic
+    needs: kong2kic2ollama
 
     env:  # Store environment variables at the job level
       PGHOST: postgres.pve-1.schenkeveld.io
